--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="sc-icons">
           <div class="sc-icon fb" onclick="{window.open('https://Gloria Facebook');}"></div>
-            <div class="sc-icon in" onclick="{window.open('https://www.instagram.com');}"></div>
+            <div class="sc-icon in" onclick="{window.open('https://www.instagram.com/tresagloria/');}"></div>
             <div class="sc-icon tw" onclick="{window.open('https://twitter.com');}"></div>
             <div class="sc-icon ln" onclick="{window.open('https://www.linkedin.com/in');}"></div>
             <div class="sc-icon pi" onclick="{window.open('https://in.pinterest.com');}"></div>
@@ -343,11 +343,11 @@
       <section id="footer">
         <div class="row">
          
-            <div class="sc-icon fb" onclick="{window.open('https://www.facebook.com/sidhu3612/');}"></div>
-            <div class="sc-icon in" onclick="{window.open('https://www.instagram.com/_.Gloria.__/');}"></div>
+            <div class="sc-icon fb" onclick="{window.open('https://www.facebook.com//');}"></div>
+            <div class="sc-icon in" onclick="{window.open('https://www.instagram.com/tresagloria/');}"></div>
             <div class="sc-icon tw" onclick="{window.open('https://twitter.com/SGloria');}"></div>
-            <div class="sc-icon ln" onclick="{window.open('https://www.linkedin.com/in/sidharth-s-886711a8');}"></div>
-            <div class="sc-icon pi" onclick="{window.open('https://in.pinterest.com/sidharthGloria/');}"></div>
+            <div class="sc-icon ln" onclick="{window.open('https://www.linkedin.com/in/s-s-886711a8');}"></div>
+            <div class="sc-icon pi" onclick="{window.open('https://in.pinterest.com/hGloria/');}"></div>
 
          
 
